--- a/.github/workflows/build_docker_image.yml
+++ b/.github/workflows/build_docker_image.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
@@ -22,9 +23,11 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: '7.1.1'
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Create Docker Image
         run: |
+          gradle test
           gradle build_image
