--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,25 @@
+tasks.register('test') {
+    group = 'build'
+    doLast{
+        dockerBuild()
+    }
+}
+
 tasks.register('build_image') {
     group = 'build'
-    dockerBuild()
+    doLast{
+        dockerBuild()
+    }
+}
+
+def test(){
+    exec {
+        commandLine 'ls'
+    }
 }
 
 def dockerBuild() {
     exec {
-        commandLine 'docker' , 'build', '-t', 'nginix', 'build'
+        commandLine 'docker' , 'build', '-t', 'ngnix', 'build'
     }
 }
